# yaw2

./: .gitignore  CHANGELOG.md  KEYHANDLING.md  LICENSE  README.md  ROTATING_KEYS.md  USERGUIDE.md
cli/: diagnose.py  export_key.py  greet_bot.py  presence.sh  protocol_vectors.py  requirements.txt  spike_peer.py  test_dtlsfp.py  test_filerace_live.py  test_fileshare.py  test_fs_live.py  test_keyring_live.py  test_reconnect_live.py  test_share_live.py  test_spike_live.py
cli/yaw2/: __init__.py  config.py  fileshare.py  identity.py  keybackup.py  keyring.py  peer.py  signaling.py
deploy/: README.md  anchor-requirements.txt  anchor.nginx.example  download.html  fnlr.se.nginx  redeploy.sh  yaw-anchor.service  yaw-signaling.service
deploy/cover/: index.html
desktop/: .gitignore  README.md  run.sh  sign-and-notarize.sh
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: README.md
desktop/src-tauri/src/: lib.rs  main.rs
docs/: README.md  yaw2-implementation.md  yaw2-protocol.md  yaw2.0-protocol.md  yaw2.1-protocol.md
docs/extensions/: file-browse.md
docs/proposals/: yip-0001-forward-secret-signaling.md
signaling/: requirements.txt  server.py  status.json  test_local.py  yawpeers.py
web/: config.example.js  index.html  yaw2.js
