[package]
name = "yaw"
version = "0.1.0"
description = "YAW desktop client"
edition = "2021"
rust-version = "1.77"

[lib]
name = "yaw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# OS keychain (the desktop value-add over the browser's localStorage seed). In
# keyring 3 the platform backends are opt-in features, so select per-target —
# otherwise it falls back to a mock store that doesn't persist.
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }
